# malpython

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md
codes/1.packages/: README.md
codes/1.packages/malpkg1/: README.md  setup.py
codes/1.packages/malpkg1/malpkg1/: __init__.py  greet.py  payload.py
codes/1.packages/malpkg2/: README.md  server.py  setup.py
codes/1.packages/malpkg3/: README.md  setup.py
codes/1.packages/malpkg4/: README.md
codes/1.packages/malpkg4/hatch/: README.md  hatch_build.py  pyproject.toml
codes/1.packages/malpkg4/pdm/: README.md  pdm_build.py  pyproject.toml
codes/1.packages/malpkg4/pdm/malpkg4/: __init__.py
codes/1.packages/malpkg4/poetry/: BUILD.md  README.md  pyproject.toml
codes/1.packages/malpkg4/poetry/malpkg4/: greet.py
codes/1.packages/malpkg5/: README.md  pyproject.toml
codes/1.packages/malpkg5/malpkg5/: __init__.py
codes/2.modules/: README.md
codes/2.modules/malmod1/: README.md  sitecustomize.py
codes/2.modules/malmod2/: README.md  startup.py
codes/2.modules/malmod3/: README.md
codes/2.modules/malmod4/: README.md
codes/2.modules/malmod4/requests/: __init__.py
codes/2.modules/malmod5/: README.md  payload.pth
codes/2.modules/malmod6/: README.md  payload.py
codes/3.interpreter/: README.md
codes/3.interpreter/malinterp1/: README.md  changes.patch
codes/3.interpreter/malinterp2/: README.md  changes.patch
codes/3.interpreter/malinterp3/: README.md  changes.patch
docs/: COMPROMISED_MAINTAINERS.md
payloads/: README.md  aws-cred-stealer.py  cloud-metadata-recon.py  cmdexec.py  conditional_execution.py  download-exec-python.py  exec-pycode.py  execute-at-exit.py  exfiltrate-jupyter-cell.py  exfiltrate-ssh-keys.py  git-config-recon.py  hook-env.py  intercept.py  monkeypatch.py  obfuscated.py  persistence-scheduled-tasks.py  rc-setup.py  rev-shell.py
payloads/cython/steal-aws-credentials/: README.md  payload.pyx  server.py  setup.py
