[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "malpkg4"
dynamic = ["version"]
description = "Simple package to demonstrate malicious package"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Satria Ady Pradana" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Bug Reports" = "https://github.com/xathrya/malpython"
Documentation = "https://github.com/xathrya/malpython"
"Source Code" = "https://github.com/xathrya/malpython"

[tool.pdm.version]
source = "file"
path = "malpkg4/__init__.py"